# amrust_3mf

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Changelog.md  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: CI.yml  coverage.yml  rust.yml
benches/: reader.rs  threemf_reader.rs  threemf_writer.rs
examples/: beam-lattice.rs  beamlattice-write.rs  beamlattice_write.rs  builder_beamlattice_example.rs  builder_example.rs  core-no-default-features.rs  io_memory_optimized_read.rs  io_speed_optimized_read.rs  memory-optimized-read.rs  query_example.rs  speed-optimized-read.rs  string_extraction.rs  unpack.rs  write.rs
src/: lib.rs  threemf_namespaces.rs
src/core/: beam_lattice.rs  beamlattice.rs  build.rs  component.rs  mesh.rs  metadata.rs  mod.rs  model.rs  object.rs  resources.rs  transform.rs  triangle_set.rs
src/io/: builder.rs  constants.rs  content_types.rs  error.rs  mod.rs  query.rs  relationship.rs  threemf_package.rs  threemf_package_lazy_reader.rs  threemf_package_pull.rs  threemf_unpacked.rs  thumbnail.rs  thumbnail_handle.rs  utils.rs  zip_utils.rs
src/query/: mod.rs
tests/: beamlattice_io.rs  core_io.rs  general_io.rs  model.rs  production_io.rs  roundtrip.rs  third_party_read.rs
tests/data/: mesh-composedpart-beamlattice-separate-model-files.3mf  mesh-composedpart-beamlattice.3mf  mesh-composedpart-separate-model-files.3mf  mesh-composedpart.3mf
tests/data/lfs/: 3dmodel.model  mesh-composedpart-beamlattice.model
tests/tests/: test_utilities.rs
threemf2/: CHANGELOG.md  Cargo.toml
threemf2-benches/: Cargo.toml
threemf2-benches/benches/: reader.rs  threemf_writer.rs
threemf2-benches/src/: lib.rs
threemf2-tests/: Cargo.toml
threemf2-tests/src/: lib.rs
threemf2-tests/tests/: model_query.rs  third_party_read.rs
threemf2-tests/tests/data/: mesh-composedpart-beamlattice-separate-model-files.3mf  mesh-composedpart.3mf
threemf2-tests/tests/tests/: test_utilities.rs
threemf2/examples/: beamlattice_write.rs  builder_beamlattice_example.rs  builder_example.rs  core-no-default-features.rs  io_memory_optimized_read.rs  io_speed_optimized_read.rs  string_extraction.rs  write.rs
threemf2/src/: threemf_namespaces.rs
threemf2/src/core/: beamlattice.rs  booleanshape.rs  build.rs  component.rs  mesh.rs  metadata.rs  mod.rs  model.rs  object.rs  resources.rs  transform.rs  triangle_set.rs
threemf2/src/io/: builder.rs  content_types.rs  error.rs  query.rs  relationship.rs  threemf_package.rs  threemf_package_lazy_reader.rs  thumbnail_handle.rs  utils.rs
threemf2/tests/: beamlattice_io.rs  core_io.rs  production_io.rs  roundtrip.rs
