[package]
name = "amrust_3mf"
version = "0.1.0"
rust-version = "1.89"
edition = "2024"
license = "MIT or Apache-2.0"

description = "3MF (3D Manufacturing Format) file format support"
keywords = ["3MF", "CAD", "slicer", "triangle", "mesh"]
categories = ["encoding", "rendering::data-formats"]

[features]
default = ["io", "write", "memory-optimized-read"]
io = ["dep:image", "dep:zip", "dep:thiserror"]
write = ["dep:instant-xml"]
memory-optimized-read = ["dep:instant-xml"]
speed-optimized-read = ["dep:serde-roxmltree", "dep:serde"]
unpack-only = ["speed-optimized-read", "dep:zip", "dep:thiserror"]

[dependencies]
instant-xml = { git = "https://github.com/vshashi01/instant-xml", branch = "main", optional = true }
image = { version = "0.25.5", default-features = false, features = [
    "png",
], optional = true }
thiserror = { version = "2.0.3", optional = true }
zip = { version = "4.4.0", default-features = false, features = [
    "deflate",
], optional = true }
serde-roxmltree = { version = "0.10.0", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }


[dev-dependencies]
pretty_assertions = { version = "1.4.1" }
criterion = { version = "0.7.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.140" }

[[bench]]
name = "reader"
harness = false

[[example]]
name = "write"
path = "examples/write.rs"
required-features = ["write", "io"]

[[example]]
name = "unpack"
path = "examples/unpack.rs"
required-features = ["unpack-only", "io"]

[[example]]
name = "memory-optimized-read"
path = "examples/memory-optimized-read.rs"
required-features = ["memory-optimized-read", "io"]

[[example]]
name = "speed-optimized-read"
path = "examples/speed-optimized-read.rs"
required-features = ["speed-optimized-read", "io"]


# [patch.crates-io]
# instant-xml = { git = "https://github.com/djc/instant-xml.git" }
